# rtic

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Notes.md  README.md  README_ru.md  Xargo.toml  build.rs  check-book.sh  expand_lock.rs  expand_lock2.rs  expanded.rs  expanded_resource.rs  gen-examples.sh  gen.rs  index.html  lockopt.asm  lockopt.expand  lockopt_vanilla.asm  memory.x  redirect.html  rust-toolchain.toml
examples-runner/: Cargo.toml  build.rs  embedded-ci.x  examples_to_runner.sh  qemu.x
examples-runner/.cargo/: config.toml
examples-runner/src/: lib.rs
examples-runner/xtask/: Cargo.toml
examples/efr32blinky/: Cargo.toml  README.md  build.rs
examples/embassy-stm32g4/: Cargo.toml
examples/esp32/: Cargo.toml  runner.sh  rust-toolchain.toml
examples/esp32c3/: Cargo.toml  README.md  runner.sh  rust-toolchain.toml
examples/esp32c6/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/hifive1/: Cargo.toml  rust-toolchain.toml
examples/lm3s6965/: Cargo.toml
examples/nrf52840_blinky/: Cargo.toml  README.md
examples/rp2040_local_i2c_init/: Cargo.toml  Embed.toml
examples/stm32f1_bluepill_blinky/: Cargo.toml  Embed.toml  README.md  memory.x
examples/stm32f3_blinky/: Cargo.toml  Embed.toml  README.md  memory.x
examples/stm32f411_adc/: Cargo.toml  README.md
examples/stm32f411_adc_and_mpsc_channel/: Cargo.toml  README.md
examples/stm32f411_encoder_polling/: Cargo.toml  README.md
examples/stm32f411_pwm_generation_and_dwt/: Cargo.toml  README.md  memory.x
examples/stm32f411_rtc_interrupt/: Cargo.toml  README.md  STM32F411.svd
heterogeneous/: Cargo.toml  README.md
heterogeneous/examples/: smallest.rs  x-init-2.rs  x-init.rs  x-schedule.rs  x-spawn.rs
heterogeneous/src/: lib.rs
homogeneous/: Cargo.toml  README.md
homogeneous/examples/: smallest.rs  x-init-2.rs  x-init.rs  x-schedule.rs  x-spawn.rs
homogeneous/src/: lib.rs
macros/: Cargo.toml
macros/src/: analyze.rs  check.rs  codegen-verbose.rs  codegen.rs  custom_local.rs  lanegen.rs  lib.rs  syntax.rs  tests.rs  trans.rs  util.rs
macros/ui/: async-local-resouces.rs  async-local-resouces.stderr  async-zero-prio-tasks.rs  async-zero-prio-tasks.stderr  extern-interrupt-used.rs  extern-interrupt-used.stderr  idle-double-local.stderr  idle-double-shared.stderr  idle-input.rs  idle-pub.rs  idle-unsafe.rs  init-divergent.stderr  init-double-local.stderr  init-double-shared.stderr  init-input.rs  init-input.stderr  init-no-context.rs  init-no-context.stderr  init-output.rs  init-output.stderr  init-pub.rs  init-pub.stderr  init-unsafe.rs  init-unsafe.stderr  interrupt-double.rs  interrupt-double.stderr  local-collision-2.rs  local-collision-2.stderr  local-collision.rs  local-collision.stderr  local-malformed-1.rs  local-malformed-2.rs  local-malformed-2.stderr  local-malformed-3.rs  local-malformed-4.rs  local-not-declared.rs  local-not-declared.stderr  local-pub.rs  local-pub.stderr  local-shared-attribute.rs  (+63 more)
mc/: Cargo.toml  README.md
mc/examples/: smallest.rs  x-init-2.rs  x-init.rs  x-schedule.rs  x-spawn.rs
mc/src/: lib.rs
rtic/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
rtic-arbiter/: Cargo.toml
rtic-arbiter/src/: lib.rs
rtic-channel/: CHANGELOG.md  Cargo.toml
rtic-channel/src/: lib.rs  wait_queue.rs  waker_registration.rs
rtic-common/: CHANGELOG.md  Cargo.toml
rtic-common/src/: dropper.rs  lib.rs  loom_cs.rs  unsafecell.rs  wait_queue.rs  waker_registration.rs
rtic-macros/: CHANGELOG.md  Cargo.toml  build.rs
rtic-macros/src/: analyze.rs  check.rs  codegen.rs  lib.rs  preprocess.rs  syntax.rs
rtic-macros/tests/: ui.rs
rtic-macros/ui/: extern-interrupt-used.rs  idle-double-local.rs  idle-double-shared.rs  idle-input.stderr  idle-no-context.rs  idle-no-context.stderr  idle-not-divergent.rs  idle-not-divergent.stderr  idle-output.rs  idle-pub.stderr  idle-unsafe.stderr  init-divergent.rs  init-double-local.rs  init-double-local.stderr  init-double-shared.rs  init-double-shared.stderr  init-no-context.rs  init-pub.rs  init-pub.stderr  init-unsafe.stderr  interrupt-double.rs  interrupt-double.stderr  local-collision-2.stderr  local-collision.rs  local-collision.stderr  local-malformed-1.stderr  local-malformed-2.rs  local-malformed-2.stderr  local-malformed-3.rs  local-malformed-3.stderr  local-not-declared.rs  local-pub.rs  local-pub.stderr  local-shared-attribute.rs  local-shared-attribute.stderr  shared-lock-free.stderr  shared-not-declared.rs  shared-not-declared.stderr  shared-pub.rs  spawn-local-different-exec.rs  (+17 more)
rtic-monotonics/: CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
rtic-monotonics/scripts/: generate-stm32-featurelist.py
rtic-monotonics/src/: atsamd21.rs  esp32.rs  esp32c3.rs  esp32c6.rs  imxrt.rs  lib.rs  nrf.rs  rp2040.rs  rp235x.rs  silabs.rs  stm32.rs  systick.rs  systick_monotonic.rs
rtic-sync/: CHANGELOG.md  Cargo.toml  README.md  checkpoint.json
rtic-sync/src/: arbiter.rs  bit_channel.rs  channel.rs  lib.rs  signal.rs  unsafecell.rs  watch.rs
rtic-time/: CHANGELOG.md  Cargo.toml  README.md
rtic-time/src/: half_period_counter.rs  lib.rs  linked_list.rs  monotonic.rs  timer_queue.rs
rtic-time/tests/: delay_precision_subtick.rs  half_period_time_counter.rs  timer_queue.rs
rtic/.cargo/: config.toml
rtic/_examples/: async-channel.rs  async-timeout.rs  big-struct-opt.rs  lock-free.rs  lock.rs  spawn.rs  spawn_err.rs  spawn_loop.rs  static.rs
rtic/examples/: async-channel-done.rs  async-channel-no-receiver.rs  async-channel-no-sender.rs  async-channel-try.rs  async-channel.rs  async-delay.rs  async-task-multiple-prios.rs  async-task.rs  async-timeout.no_rs  async-timeout.rs  big-struct-opt.rs  binds.rs  cfg-whole-task.no_rs  common.rs  declared_locals.rs  destructure.rs  extern_binds.rs  extern_spawn.rs  generics.rs  hardware.rs  idle-wfi.rs  idle.rs  init.rs  locals.rs  lock-free.rs  multilock.rs  not-sync.rs  only-shared-access.rs  peripherals-taken.rs  pool.no_rs  pool.rs  pool.rs_old  preempt.rs  prio-inversion.rs  ramfunc.rs  (+18 more)
(+237689 files in other folders)
