[package]
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Real-Time Interrupt-driven Concurrency (RTIC): a concurrency framework for building real-time systems"
documentation = "https://rtic.rs/"
edition = "2021"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rtic"
readme = "README.md"
repository = "https://github.com/rtic-rs/cortex-m-rtic"

version = "1.1.2"

[lib]
name = "rtic"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rtic-macros = { path = "macros", version = "1.1.1" }
rtic-monotonic = "1.0.0"
rtic-core = "1.0.0"
heapless = "0.7.7"
bare-metal = "1.0.0"

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
lm3s6965 = "0.1.3"
cortex-m-semihosting = "0.3.3"
systick-monotonic = "1.0.0"

[dev-dependencies.panic-semihosting]
features = ["exit"]
version = "0.5.2"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
trybuild = "1"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [
  "macros",
  "xtask",
]

# do not optimize proc-macro deps or build scripts
[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }
