[workspace]
default-members = [
    "rtic",
    "rtic-sync",
    "rtic-common",
    "rtic-macros",
    "rtic-monotonics",
    "rtic-time",
]
members = [
    "rtic",
    "rtic-sync",
    "rtic-common",
    "rtic-macros",
    "rtic-monotonics",
    "rtic-time",
    "xtask",
]

[profile.release]
codegen-units = 1
lto = true

# do not optimize proc-macro deps or build scripts
[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }
