[workspace]
default-members = [
    "rtic",
    "rtic-sync",
    "rtic-common",
    "rtic-macros",
    "rtic-monotonics",
    "rtic-time",
]
members = [
    "rtic",
    "rtic-sync",
    "rtic-common",
    "rtic-macros",
    "rtic-monotonics",
    "rtic-time",
    "xtask",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true

# do not optimize proc-macro deps or build scripts
[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
