[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "heterogeneous"
# this crate is only used for testing
publish = false
version = "0.0.0-alpha.0"

[dependencies]
cortex-m = { version = "0.7.3", optional = true }
bare-metal = { version = "0.2.4", optional = true }

[dependencies.cortex-m-rtic]
path = ".."
features = ["heterogeneous"]

[features]
default = ["bare-metal"]
cortex-m-7 = ["cortex-m"]

[dev-dependencies]
panic-halt = "0.2.0"
microamp = "0.1.0-alpha.1"
