[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "homogeneous"
# this crate is only used for testing
publish = false
version = "0.0.0-alpha.0"

[dependencies]
cortex-m = "0.7.3"

[dependencies.cortex-m-rtic]
path = ".."
features = ["homogeneous"]

[dev-dependencies]
panic-halt = "0.2.0"
