[package]
authors = [
  "The Real Time For the Masses developers",
  "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Procedural macros of the cortex-m-rtfm crate"
documentation = "https://rtfm-rs.github.io/cortex-m-rtfm/api/cortex_m_rtfm"
edition = "2018"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rtfm-macros"
readme = "../README.md"
repository = "https://github.com/rtfm-rs/cortex-m-rtfm"
version = "0.5.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
#rtfm-syntax = "0.4.1"

[dependencies.rtfm-syntax] 
git = "https://github.com/rtfm-rs/rtfm-syntax.git"
branch = "task_local_experiment"
version = "0.4.1"

[features]
heterogeneous = []
homogeneous = []
