[package]
name = "rtic-channel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
critical-section = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }


[features]
default = []
testing = ["critical-section/std"]
