[package]
name = "rtic-common"
version = "1.0.0-alpha.0"
edition = "2021"
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "rtic-common lib TODO"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1"

[features]
default = []
testing = ["critical-section/std"]
