[package]
name = "rtic-common"
version = "1.0.1"

edition = "2021"
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Emil Fresk <emil.fresk@gmail.com>",
  "Henrik Tjäder <henrik@tjaders.com>",
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "rtic-common lib TODO"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rtic-rs/rtic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-atomic = { version = "1", default-features = false }

[features]
default = []
testing = []

[target.'cfg(not(loom))'.dependencies]
critical-section = "1"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2" }
critical-section = { version = "1", features = [ "restore-state-bool" ] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }