[package]
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Emil Fresk <emil.fresk@gmail.com>",
  "Henrik Tjäder <henrik@tjaders.com>",
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "Procedural macros, syntax parsing, and codegen of the RTIC crate"
documentation = "https://rtic-rs.github.io/rtic/api/rtic"
edition = "2021"
keywords = [
  "embedded",
  "async",
  "runtime",
  "no-std",
  "rtos",
]
license = "MIT OR Apache-2.0"
name = "rtic-macros"
readme = "../README.md"
repository = "https://github.com/rtic-rs/rtic"

version = "2.3.0"

[package.metadata.docs.rs]
features = ["test-template"]

[lib]
proc-macro = true

[features]
default = []

# list of supported codegen backends
cortex-m-source-masking = []
cortex-m-basepri = []
riscv-esp32c3 = []
riscv-esp32c6 = []
# riscv-clic = []
# riscv-ch32 = []
riscv-slic = []
riscv-clint = ["riscv-slic"]
riscv-mecall= ["riscv-slic"]

# backend API test
test-template = []

[dependencies]
indexmap = "2.0.0"
proc-macro2 = "1.0.49"
proc-macro-error2 = "2.0"
quote = "1.0.23"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = "1.0.73"
