[package]
name = "rtic-monotonics"
version = "1.0.0-alpha.2"

edition = "2021"
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Emil Fresk <emil.fresk@gmail.com>",
  "Henrik Tjäder <henrik@tjaders.com>",
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "A library that provides implementations of the Monotonic trait from rtic-time"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["cortex-m-systick", "rp2040", "nrf52840"]
rustdoc-flags = ["--cfg", "docsrs"]

[dependencies]
rtic-time = { version = "1.0.0-alpha.1", path = "../rtic-time" }
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
fugit = { version = "0.3.6" }
atomic-polyfill = "1"
cfg-if = "1.0.0"
cortex-m = { version = "0.7.6", optional = true }
critical-section = { version = "1", optional = true }

# RP2040
rp2040-pac = { version = ">=0.2.0,<0.5", optional = true }

# nRF52
nrf52810-pac = { version = "0.12.2", optional = true }
nrf52811-pac = { version = "0.12.2", optional = true }
nrf52832-pac = { version = "0.12.2", optional = true }
nrf52833-pac = { version = "0.12.2", optional = true }
nrf52840-pac = { version = "0.12.2", optional = true }
nrf5340-app-pac = { version = "0.12.2", optional = true }
nrf5340-net-pac = { version = "0.12.2", optional = true }
nrf9160-pac = { version = "0.12.2", optional = true }

[features]
default = []
defmt = ["fugit/defmt"]

# Systick on Cortex-M, default 1 kHz
cortex-m-systick = ["dep:cortex-m"]
systick-100hz = []
systick-10khz = []

# Timer peripheral on the RP2040
rp2040 = ["dep:cortex-m", "dep:rp2040-pac"]

# nRF Timers and RTC
nrf52810 = ["dep:cortex-m", "dep:nrf52810-pac", "dep:critical-section"]
nrf52811 = ["dep:cortex-m", "dep:nrf52811-pac", "dep:critical-section"]
nrf52832 = ["dep:cortex-m", "dep:nrf52832-pac", "dep:critical-section"]
nrf52833 = ["dep:cortex-m", "dep:nrf52833-pac", "dep:critical-section"]
nrf52840 = ["dep:cortex-m", "dep:nrf52840-pac", "dep:critical-section"]
nrf5340-app = ["dep:cortex-m", "dep:nrf5340-app-pac", "dep:critical-section"]
nrf5340-net = ["dep:cortex-m", "dep:nrf5340-net-pac", "dep:critical-section"]
nrf9160 = ["dep:cortex-m", "dep:nrf9160-pac", "dep:critical-section"]
