[package]
name = "rtic-monotonics"
version = "3.0.0"

edition = "2021"
authors = [
    "The Real-Time Interrupt-driven Concurrency developers",
    "Emil Fresk <emil.fresk@gmail.com>",
    "Henrik Tjäder <henrik@tjaders.com>",
    "Jorge Aparicio <jorge@japaric.io>",
    "Per Lindgren <per.lindgren@ltu.se>",
    "Andres Vahter <andres@vahter.me>",
]
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "A library that provides implementations of the Monotonic trait from rtic-time"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rtic-rs/rtic"
exclude = ["scripts/**"]

[package.metadata.docs.rs]
features = [
    "cortex-m-systick",
    "silabs_letimer0",
    "silabs_timer0",
    "silabs-metapac/efr32mg24b220f1536im48",
    "rp2040",
    "rp235x",
    "nrf52840",
    "imxrt_gpt1",
    "imxrt_gpt2",
    "imxrt-ral/imxrt1011",
    "stm32-metapac/stm32h725ag",
    "stm32_tim2",
    "stm32_tim3",
    "stm32_tim4",
    "stm32_tim5",
    "stm32_tim15",
    "esp32c3-systimer",
    "esp32c6-systimer",
]
rustdoc-flags = ["--cfg", "docsrs"]

[dependencies]
rtic-time = { version = "2.0.0", path = "../rtic-time" }
fugit = { version = "0.3.6" }
portable-atomic = { version = "1" }
cfg-if = "1.0.0"
cortex-m = { version = "0.7.6", optional = true }
critical-section = { version = "1", optional = true }

# RP2040
rp2040-pac = { version = "0.6", optional = true }

# RP235x
rp235x-pac = { version = "0.2.0", optional = true }

# nRF52
nrf52805-pac = { version = "0.12.2", optional = true }
nrf52810-pac = { version = "0.12.2", optional = true }
nrf52811-pac = { version = "0.12.2", optional = true }
nrf52832-pac = { version = "0.12.2", optional = true }
nrf52833-pac = { version = "0.12.2", optional = true }
nrf52840-pac = { version = "0.12.2", optional = true }
nrf5340-app-pac = { version = "0.12.2", optional = true }
nrf5340-net-pac = { version = "0.12.2", optional = true }
nrf9160-pac = { version = "0.12.2", optional = true }
# nrf9120-pac backs both the nRF9151 and nRF9161 (both built on the nRF9120 SoC)
nrf9120-pac = { version = "0.12.2", optional = true }

# Silabs (EFM32, EFR32)
silabs-metapac = { version = ">=0.4", optional = true }

# STM32
stm32-metapac = { version = ">=16", features = ["metadata"], optional = true }

# i.MX RT
imxrt-ral = { version = ">=0.5.4", optional = true }

esp32c3 = { version = "0.31.0", optional = true }
esp32c6 = { version = "0.22.0", optional = true }
riscv = { version = "0.16.0", optional = true }

[features]
default = []
defmt = ["fugit/defmt"]

# Systick on Cortex-M, default 1 kHz
cortex-m-systick = ["dep:cortex-m"]
# Use 64-bit wide backing storage for the Instant
systick-64bit = []

# Timer peripheral on the RP2040
rp2040 = ["dep:cortex-m", "dep:rp2040-pac"]

# Timer peripheral on the RP235x
rp235x = ["dep:cortex-m", "dep:rp235x-pac"]

# nRF Timers and RTC
nrf52805 = ["dep:cortex-m", "dep:nrf52805-pac", "dep:critical-section"]
nrf52810 = ["dep:cortex-m", "dep:nrf52810-pac", "dep:critical-section"]
nrf52811 = ["dep:cortex-m", "dep:nrf52811-pac", "dep:critical-section"]
nrf52832 = ["dep:cortex-m", "dep:nrf52832-pac", "dep:critical-section"]
nrf52833 = ["dep:cortex-m", "dep:nrf52833-pac", "dep:critical-section"]
nrf52840 = ["dep:cortex-m", "dep:nrf52840-pac", "dep:critical-section"]
nrf5340-app = ["dep:cortex-m", "dep:nrf5340-app-pac", "dep:critical-section"]
nrf5340-net = ["dep:cortex-m", "dep:nrf5340-net-pac", "dep:critical-section"]
# nRF91 chips expose their peripherals through a TrustZone secure (`-s`) and a
# non-secure (`-ns`) address alias. Pick the variant matching the security domain
# your firmware runs in. Enabling both variants of a chip is a compile error.
nrf9160 = ["nrf9160-ns"] # Deprecated alias kept for backwards compatibility, equals `nrf9160-ns`.
nrf9160-ns = ["dep:cortex-m", "dep:nrf9160-pac", "dep:critical-section"]
nrf9160-s = ["dep:cortex-m", "dep:nrf9160-pac", "dep:critical-section"]
nrf9151-ns = ["dep:cortex-m", "dep:nrf9120-pac", "dep:critical-section"]
nrf9151-s = ["dep:cortex-m", "dep:nrf9120-pac", "dep:critical-section"]
nrf9161-ns = ["dep:cortex-m", "dep:nrf9120-pac", "dep:critical-section"]
nrf9161-s = ["dep:cortex-m", "dep:nrf9120-pac", "dep:critical-section"]

# i.MX RT Timers
# Use as `features = ["imxrt_gpt1"]`
imxrt = ["dep:cortex-m", "dep:imxrt-ral"]
imxrt_gpt1 = ["imxrt"]
imxrt_gpt2 = ["imxrt"]

# EFR32 LETIMER, RTCC and TIMER monotonics. Use the per-peripheral selector
# features together with the chip feature on your own `silabs-metapac`
# dependency: `features = ["silabs_timer0"]` plus
# `silabs-metapac = { version = "0.4", features = ["efr32mg24b220f1536im48"] }`
silabs = ["dep:cortex-m", "dep:silabs-metapac"]
silabs_letimer0 = ["silabs"]
silabs_rtcc = ["silabs"]

# Per-instance TIMER selection for the `silabs::timer` monotonic (MG24/FG25/MG26).
# TIMER0/1 (and MG26's TIMER8/9) are 32-bit; TIMER2..7 are 16-bit. Enable only
# instances your chip actually has.
silabs_timer0 = ["silabs"]
silabs_timer1 = ["silabs"]
silabs_timer2 = ["silabs"]
silabs_timer3 = ["silabs"]
silabs_timer4 = ["silabs"]
silabs_timer5 = ["silabs"]
silabs_timer6 = ["silabs"]
silabs_timer7 = ["silabs"]
silabs_timer8 = ["silabs"]
silabs_timer9 = ["silabs"]

# ESP32 Timers
esp32c3-systimer = ["dep:esp32c3", "dep:riscv"]
esp32c6-systimer = ["dep:esp32c6", "dep:riscv"]

# STM32 timers
# Use together with the chip feature on your own `stm32-metapac` dependency:
# `features = ["stm32_tim15"]` plus
# `stm32-metapac = { version = "21", features = ["stm32g081kb"] }`
stm32_tim2 = ["stm32-metapac"]
stm32_tim3 = ["stm32-metapac"]
stm32_tim4 = ["stm32-metapac"]
stm32_tim5 = ["stm32-metapac"]
stm32_tim15 = ["stm32-metapac"]

stm32-metapac = ["dep:stm32-metapac", "dep:cortex-m"]
