[package]
name = "rtic-sync"
version = "1.0.3"

edition = "2021"
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Emil Fresk <emil.fresk@gmail.com>",
  "Henrik Tjäder <henrik@tjaders.com>",
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "Synchronization primitives for asynchronous contexts"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
critical-section = "1"
rtic-common = { version = "1.0.0", path = "../rtic-common" }
portable-atomic = { version = "1", default-features = false }
embedded-hal = { version = "1.0.0-rc.1", optional = true }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
embedded-hal-bus = { version = "0.1.0-rc.1", optional = true, features = ["async"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }


[features]
default = []
testing = ["critical-section/std", "rtic-common/testing"]
unstable = ["embedded-hal", "embedded-hal-async", "embedded-hal-bus"]
