[package]
name = "rtic-time"
version = "1.1.0"

edition = "2021"
authors = [
    "The Real-Time Interrupt-driven Concurrency developers",
    "Emil Fresk <emil.fresk@gmail.com>",
    "Henrik Tjäder <henrik@tjaders.com>",
    "Jorge Aparicio <jorge@japaric.io>",
    "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std", "asynchronous"]
description = "rtic-time lib TODO"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1"
futures-util = { version = "0.3.25", default-features = false }
rtic-common = { version = "1.0.0", path = "../rtic-common" }
atomic-polyfill = "1"

[dev-dependencies]
embedded-hal = { version = "1.0.0-rc.2" }
embedded-hal-async = { version = "1.0.0-rc.2" }
fugit = "0.3.7"
parking_lot = "0.12"
cassette = "0.2"
cooked-waker = "5.0.0"
