[package]
name = "efr32blinky"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[features]
default = ["mg26"]
# Select exactly one board.
mg26 = [
    "silabs-metapac/efr32mg26b420f3200im68",
    "rtic-monotonics/efr32mg26b420f3200im68",
]
mg24 = [
    "silabs-metapac/efr32mg24b220f1536im48",
    "rtic-monotonics/efr32mg24b220f1536im48",
]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# PAC only (no HAL); `rt` provides the vector table. Chip feature added by the
# board feature above.
silabs-metapac = { version = "0.4.0", features = ["rt"] }

[dependencies.rtic]
path = "../../rtic"
# EFR32MG24/26 are Cortex-M33.
features = ["thumbv8main-backend"]

[dependencies.rtic-monotonics]
path = "../../rtic-monotonics"

[profile.release]
debug = 2
opt-level = "s"
lto = "fat"
codegen-units = 1
